--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ ADMIN_PASSWORD=1234
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 jwt_secret=fdfergghbvbrthtrbrtrg434t34gERFDSfdsg
+CRON_JOB=0 6 * * ?
