--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/spring-147?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=k76TR#&d2
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.generate-ddl=true
